[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://dxsi86umum2nv" path="res://aug-9-2025-3d-explorations/scripts/ChatUI.gd" id="1_7t0ii"]

[node name="ChatUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_7t0ii")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.35
anchor_bottom = 0.6
margin_left = 8.0
margin_top = 160.0
margin_right = 360.0
margin_bottom = 560.0

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
size_flags_vertical = 3
scroll_active = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_height = 28.0

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
size_flags_horizontal = 3
placeholder_text = "Say something..."

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
text = "Send"

